fix(menu) make background scroll on larger screens so that page not jumps because of disappearing scrollbar

--- a/styles/index.less
+++ b/styles/index.less
@@ -79,6 +79,11 @@ html, body {
 body.disable-scroll {
 	overflow: hidden;
 	max-height: 100vh;
+
+	@media @screen-medium {
+		overflow: auto;
+		max-height: none;
+	}
 }
 
 * {
